labs/lab2/testsuite/good/subtyping/arith_double_plus_int.cc
int main() {
  double x;
  x = 1.1 + 1;
  return 0;
}
