labs/lab2/testsuite/bad/redecl_var_and_parameter.cc
int bar(int x) {
	int x;
        return x;
}

int main() { return 0; }
